--- a/app/src/main/res/layout/activity_modify_info_page.xml
+++ b/app/src/main/res/layout/activity_modify_info_page.xml
@@ -48,6 +48,18 @@
                 android:layout_marginStart="15dp"
                 android:gravity="center"
                 android:orientation="vertical">
+                <EditText
+                    android:id="@+id/edt_show"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/cover_txt_more"
+                    android:hint="الموافقة على المهارة"
+                    android:maxLength="30"
+                    android:padding="12dp"
+                    android:textColor="@color/text_info_color"
+                    android:textColorHint="@color/text_color"
+                    android:textSize="@dimen/txt_info_size" />
 
                 <EditText
                     android:id="@+id/edt_full_nameM"
