--- a/app/src/main/res/layout/activity_info_page.xml
+++ b/app/src/main/res/layout/activity_info_page.xml
@@ -218,7 +218,7 @@
     <TextView
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="55"
+        android:text=""
         android:gravity="center"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -252,7 +252,7 @@
     <TextView
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="55"
+        android:text=""
         android:gravity="center"
         android:textSize="18sp"
         android:textStyle="bold"
