--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,6 +34,15 @@
                     android:textColor="#fffcfc"
                     android:textSize="26sp"
                     android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/btn_admin"
+                    android:layout_width="38dp"
+                    android:layout_height="38dp"
+                    android:textColor="#fffcfc"
+                    android:textSize="26sp"
+                    android:textStyle="bold"
+                    android:src="@drawable/admin_icon"
+                    android:contentDescription="TODO" />
 
 
             </android.support.v7.widget.Toolbar>
